welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:2: error: ';' expected but integer literal found.
	if((a/10 == b/10 || a/10 == b %10)) || a%10 == b/10 || a%10 == b %10)){
                                                 ^